# work

./: .gitignore  .gitmodules  README.md  README.txt  clang_format_webkit.sh  cleanup.py  requirements.txt  work_git.pyproj
2017/AllInOne/: AllInOne.sln
2018/prac/: file.cpp  main.cpp
3_months_test/: blueprint
3_months_test/C++Modern/: Iterators.cpp  practice_c++11features.cpp
3_months_test/LC/: count_islands.cpp  freq_query.cpp  stoi.cpp  (+1 more)
AllInOne/: AllInOne.sln
All_C_C++/: README.md
All_Java/: myIo.java  test.java
C++/: myVector.cpp  myVector.cpp~
C_C++/: test.cpp
Java/: FirstJapp.java
JustForCoding/: readme.txt
MyMapApp/: MyMapApp.sln
QCS/: QCS.sln
QtPBook/: datastructures.h  datastructures.h.gch  datestructures.h.gch  db_p.h.gch  file_p.h.gch  main.cpp  makefile  pbook.cpp  pbook.h  pbook.h.gch
ancient/playground/cppProjects/ds_algo/: CMakeLists.txt  main.cpp
ancient/playground/cppProjects/ds_algo/DSA/: DSA.pro  main.cpp  trie.h
ancient/playground/cppProjects/ds_algo/List/: list.h  main.cpp
ancient/playground/cppProjects/ds_algo/Misc/: binarynumbers.cpp
ancient/playground/cppProjects/ds_algo/Recursion/: RecursionUtility.cpp  RecursionUtility.h  main.cpp
ancient/playground/cppProjects/ds_algo/Vector/: Vector.h  Vector.pro  main.cpp
ancient/ser_des/: CMakeLists.txt  README.md  example_code.cpp  main.cpp
ancient/ser_des/lzmautility/: CMakelists.txt  README.md  lzmacodec.cpp  lzmacodec.h  matlab_codec.cpp
ancient/ser_des/lzmautility/tests/: CMakelists.txt  main.cpp
blind_75/: lc_anagram.cpp  lc_group_anagrams.cpp  lc_longest_consecutive_subsequence.cpp  lc_sub_array_sum_sliding_window.cpp  lc_top_k_frequent_elements.cpp  lc_two_sum.cpp  test.cpp
cpp_learning/: cpp_quiz_1.cpp  future_extend.cpp  quiz_319.cpp  type_traits.cpp  variadic_templ.cpp
gelecegini_icin/: calc_paths_diff_cities.cpp  graph_probs.cpp  graphs_bst_dfs.cpp  sll.cpp
js/: matrix_operations.js
jun-aug-2019/: CMakeLists.txt  blueprint
jun-aug-2019/cpp-11-17-features/: CMakeLists.txt  autotype.cpp  initializerlist.cpp  tests.cpp
jun-aug-2019/dsa/: CMakeLists.txt  MyVector.h  binarysearch.h  hashtable.h  linklist.cpp  linklist.h  main.cpp  queue.h  searchAlgos.h  sort.h
jun-dec-2019/cpp-11-17-features/: CMakeLists.txt  autotype.cpp  initializerlist.cpp  r-l-value-refs.cpp  tests.cpp
jun-dec-2019/dsa/: CMakeLists.txt  MyVector.h  bitwise.h  hashtable.h  linklist.h  main.cpp  queue.h  searchAlgos.h  sort.h
languages/cpp/all_code/: CMakeLists.txt  async.h  calc_dbus_client.cpp  calc_dbus_server.cpp  g_main.cpp  heaps.h  lc_main.cpp  leetcode_longest_consecutive_arr.h  matrices.h  parallel_file_read_write.h  threads.h
modern_cpp/: a.out  constructors.cpp  consumer_producer_without_cond.cpp  file_operations.cpp  inheritances.cpp  lambas.cpp  shared_ptr_unique_ptr.cpp  smart_pointers.cpp  thread_atomic.cpp  try_deadlock.cpp
pBook/: commonData.h
pbook/: main.c  makefile  phonebook.c  phonebook.h
playground/: CMakeLists.txt  main.cpp  multi_thread_crashing.cpp  recur.cpp  showImg.py  test.cpp
playground/LearnCMake/qtApp/: CMakeLists.txt  main.cpp
playground/c++11-17-features/: CMakeLists.txt  codingprac.h  cppfeatures.cpp  cppfeatures.h  main.cpp
playground/cmake_test_cpp/: CMakeLists.txt  main.cpp  test.cpp
playground/cpp/templates/: CMakeLists.txt  codingprac.cpp  cppfeatures.cpp  cppfeatures.h  main.cpp
playground/cppProjects/templates/: CMakeLists.txt  main.cpp
playground/ds_algo/: CMakeLists.txt
playground/ds_algo/BitManipulations/: bin2dec.cpp
playground/ds_algo/DSA/: LinkList.h  Map.cpp  Map.h  trie.h
playground/ds_algo/Recursion/: CMakeLists.txt  RecursionExamples.h  RecursionUtility.cpp  RecursionUtility.h
playground/ds_algo/Sorting/: Sorting.h
playground/ds_algo/Vector/: Vector.h
playground/learn_cmake/create_library/: CMakeLists.txt  main.cpp  someheader.h  someimpl.cpp
playground/learn_cmake/gpbApp/: CMakeLists.txt  main.cpp
playground/test/cmake_learning/apps/boost_cmake/: CMakeLists.txt
playground/test/cmake_learning/apps/protobuf_cmake/: CMakeLists.txt
playground/test/cmake_learning/apps/qt_cmake/: CMakeLists.txt  main.cpp
playground/test/cmake_learning/libs/boost_lib/test_app/: CMakeLists.txt  main.cpp
playground/test/conan_learning/spdlog_proj/: CMakeLists.txt  conanfile.txt
playground/test/conan_learning/spdlog_proj/src/: main.cpp
prep/: linklist.cpp  makefile  mysmartpointers.cpp  queue.cpp  sll.cpp  sll.h  sorts.cpp  test.cpp  testSll.cpp  trees.cpp
projects/: reade.txt
projects/cpp_projs/rest_apis/http_client/: CMakeLists.txt
projects/http_file_server/: CMakeLists.txt  http_server.h  main.cpp
projects/logger/: CMakeLists.txt
projects/logger/src/: logger.cpp  logger.h  main.cpp
projects/logger_http_client_server/http_server/: CMakeLists.txt  main.cpp
projects/logger_http_client_server/logger/: CMakeLists.txt  http_client.h  logger.cpp  logger.h  main.cpp
projects/simu_football_positioning/: CMakeLists.txt  conanfile.txt  readme.txt
projects/simu_football_positioning/qtApp/: CMakeLists.txt  graphicsview.cpp  graphicsview.h  main.cpp  zeromq_client.cpp  zeromq_client.h
projects/simu_football_positioning/src/: data_ipublisher.h  data_publisher_impl.cpp  data_publisher_impl.h  generator.hpp  main.cpp
projects/simu_football_positioning/src/schemas/: position.pb.cc  position.pb.h  position.proto
projects/simu_football_positioning/tests/: CMakeLists.txt  client.cpp  server.cpp
python/: bitman.py  helloQt.py  learn1.py
qtCoding/: imageViewer.pro  widget.cpp
rust/: classes.rs
software_programming/: CMakeLists.txt  main.cpp  test.cpp
software_programming/adv_dsa/: CMakeLists.txt  Map.h  test.cpp
software_programming/dsa/: Arrays.h  BST.h  Graphs.h  LinkList.h  Searching.h  Sorting.h  Stack.h  main.cpp  test.cpp
software_programming/practice/: .max_sum_array.cpp.swp  CMakeLists.txt  CrackingCodingInterviewQuestions.cpp  MockInterviewOzi.cpp  coding.cpp  cpp_modern.cpp  max_sum_array.cpp  passby_ref_move.cpp  prog.cpp  str_str.cpp  test.cpp  wk2.cpp
test/: main.cpp  main.py
(+1922 files in other folders)
