project(gpbApp)
find_package(Protobuf REQUIRED)
enable_testing()
find_package(GTest  REQUIRED)
if( Protobuf_FOUND AND GTEST_FOUND )
    Message("protobuf found")    
    set (INCS ${Protobuf_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS})
    set (libs ${Protobuf_LIBRARIES} ${GTEST_LIBRARIES} -pthread)
    include_directories(${INCS})
    add_executable(gpbApp main.cpp)
    target_link_libraries(gpbApp ${libs})
else()
    Message("Couldnt find protobuf")
endif()